Top menu bar in with button state changing on click

--- a/SingleViewAppSwiftTemplate/Base.lproj/Main.storyboard
+++ b/SingleViewAppSwiftTemplate/Base.lproj/Main.storyboard
@@ -1,23 +1,90 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad10_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SingleViewAppSwiftTemplate" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Wsy-Vc-yzH">
+                                <rect key="frame" x="0.0" y="0.0" width="834" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="waA-dI-mY5">
+                                        <rect key="frame" x="0.0" y="0.0" width="208.5" height="70"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <state key="normal" title="Guest">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="topMenuButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7aN-eI-K00"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkH-ay-OyC">
+                                        <rect key="frame" x="208.5" y="0.0" width="208.5" height="70"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Employee">
+                                            <color key="titleColor" red="0.80745577812194824" green="0.63705790042877197" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="topMenuButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="agv-3D-LB4"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FK4-ZL-W2N">
+                                        <rect key="frame" x="417" y="0.0" width="208.5" height="70"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Manager">
+                                            <color key="titleColor" red="0.80919802557314147" green="0.63712244071918045" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="topMenuButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1cE-6v-DbZ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O55-wS-VRR">
+                                        <rect key="frame" x="625.5" y="0.0" width="208.5" height="70"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Vendor">
+                                            <color key="titleColor" red="0.80919802557314147" green="0.63712244071918045" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="topMenuButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OF4-ot-0E8"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.54343748089999999" green="0.4275732934" blue="0.66372793910000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="Afl-CE-Zcb"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.85773247480392456" green="0.83886104822158813" blue="0.8734818696975708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Wsy-Vc-yzH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TOF-x2-NcX"/>
+                            <constraint firstItem="Wsy-Vc-yzH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="V3Y-Uk-rtt"/>
+                            <constraint firstAttribute="trailing" secondItem="Wsy-Vc-yzH" secondAttribute="trailing" id="lu4-rq-wUO"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="employeeTopButton" destination="mkH-ay-OyC" id="DxP-DR-USo"/>
+                        <outlet property="guestTopButton" destination="waA-dI-mY5" id="RD5-a7-yoR"/>
+                        <outlet property="managerTopButton" destination="FK4-ZL-W2N" id="CZe-aJ-imX"/>
+                        <outlet property="topMenubar" destination="Wsy-Vc-yzH" id="JK8-Rl-DQx"/>
+                        <outlet property="vendorTopButton" destination="O55-wS-VRR" id="rgi-5w-4u4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
