--- a/SingleViewAppSwiftTemplate/Base.lproj/Main.storyboard
+++ b/SingleViewAppSwiftTemplate/Base.lproj/Main.storyboard
@@ -682,6 +682,7 @@
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="generatePass:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qux-Z8-vhz"/>
+                                            <segue destination="fq0-Yc-ZZj" kind="show" identifier="TicketViewController" id="Q4I-fV-L3B"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcx-YM-KsM">
@@ -790,5 +791,83 @@
             </objects>
             <point key="canvasLocation" x="33.812949640287769" y="56.654676258992808"/>
         </scene>
+        <!--Ticket View Controller-->
+        <scene sceneID="Kgp-nM-ORY">
+            <objects>
+                <viewController id="fq0-Yc-ZZj" customClass="TicketViewController" customModule="SingleViewAppSwiftTemplate" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="htF-zF-Hw0"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZUc-Ji-Aua"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HyM-c8-Bzb">
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uFc-f2-Drr">
+                                <rect key="frame" x="0.0" y="0.0" width="834" height="85"/>
+                                <color key="backgroundColor" red="0.34724307059999998" green="0.58364045620000005" blue="0.56011843679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="znW-16-q1l"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Create New Pass">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOQ-yf-4cT" customClass="TicketView" customModule="SingleViewAppSwiftTemplate" customModuleProvider="target">
+                                <rect key="frame" x="40" y="125" width="754" height="300"/>
+                                <subviews>
+                                    <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Xqa-Ha-5cI">
+                                        <rect key="frame" x="60" y="60" width="204" height="190"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FaceImageAsset" translatesAutoresizingMaskIntoConstraints="NO" id="6nq-XQ-Yfi">
+                                                <rect key="frame" x="0.0" y="0.0" width="204" height="190"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                </userDefinedRuntimeAttributes>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f09-9N-lc4">
+                                        <rect key="frame" x="340" y="20" width="74" height="10"/>
+                                        <color key="backgroundColor" red="0.85773247480000003" green="0.83886104819999996" blue="0.87348186969999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="10" id="XkK-fv-s2r"/>
+                                            <constraint firstAttribute="width" constant="74" id="ec4-Dh-3zb"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="f09-9N-lc4" firstAttribute="centerX" secondItem="VOQ-yf-4cT" secondAttribute="centerX" id="IQo-EQ-g4F"/>
+                                    <constraint firstItem="Xqa-Ha-5cI" firstAttribute="top" secondItem="VOQ-yf-4cT" secondAttribute="top" constant="60" id="U9x-I0-Cm5"/>
+                                    <constraint firstAttribute="height" constant="300" id="XaD-uL-vkX"/>
+                                    <constraint firstAttribute="bottom" secondItem="Xqa-Ha-5cI" secondAttribute="bottom" constant="50" id="ekO-OY-ghs"/>
+                                    <constraint firstItem="Xqa-Ha-5cI" firstAttribute="leading" secondItem="VOQ-yf-4cT" secondAttribute="leading" constant="60" id="iTL-cz-nPe"/>
+                                    <constraint firstItem="f09-9N-lc4" firstAttribute="top" secondItem="VOQ-yf-4cT" secondAttribute="top" constant="20" id="ytf-Jg-fGa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.85773247480000003" green="0.83886104819999996" blue="0.87348186969999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="VOQ-yf-4cT" secondAttribute="trailing" constant="20" id="Opo-qX-UTs"/>
+                            <constraint firstItem="uFc-f2-Drr" firstAttribute="top" secondItem="HyM-c8-Bzb" secondAttribute="top" id="QUE-Yn-pk5"/>
+                            <constraint firstItem="uFc-f2-Drr" firstAttribute="leading" secondItem="HyM-c8-Bzb" secondAttribute="leading" id="SGv-iF-zte"/>
+                            <constraint firstItem="VOQ-yf-4cT" firstAttribute="top" secondItem="uFc-f2-Drr" secondAttribute="bottom" constant="40" id="Ucx-7t-xBV"/>
+                            <constraint firstAttribute="trailing" secondItem="uFc-f2-Drr" secondAttribute="trailing" id="a8w-bg-MYu"/>
+                            <constraint firstItem="VOQ-yf-4cT" firstAttribute="leading" secondItem="HyM-c8-Bzb" secondAttribute="leadingMargin" constant="20" id="mxx-Ep-t37"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nhD-Ri-thr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="810" y="68"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="FaceImageAsset" width="204" height="198"/>
+    </resources>
 </document>
